--- a/app/assets/stylesheets/desktop/login.scss
+++ b/app/assets/stylesheets/desktop/login.scss
@@ -222,10 +222,6 @@
       margin-top: 5px;
     }
 
-    &:first-of-type > label {
-      margin-top: 0;
-    }
-
     > label {
       width: auto;
     }
@@ -269,14 +265,12 @@
 
 .login-form {
   .tip {
-    &:empty {
+    &:not(:empty) + td {
       display: none;
     }
-
     &:not(:empty),
     &:empty + td {
       min-height: 1.75em;
-      margin-top: 0.25em;
       &.bad .svg-icon {
         vertical-align: middle;
       }
